Fix syntax errors

--- a/ubuntu-server-14.04/config/keystone.conf
+++ b/ubuntu-server-14.04/config/keystone.conf
@@ -494,7 +494,7 @@ log_dir = /var/log/keystone
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
 #connection = <None>
-connection = mysql+pymysql://keystone:glen32@controller/keystone
+connection = mysql+pymysql://keystone:openstack@controller/keystone
 
 # The SQLAlchemy connection string to use to connect to the slave database.
 # (string value)
