--- a/ubuntu-server-14.04/config/nova.conf
+++ b/ubuntu-server-14.04/config/nova.conf
@@ -41,6 +41,9 @@ password = openstack
 [vnc]
 vncserver_listen = $my_ip
 vncserver_proxyclient_address = $my_ip
+enabled = True
+novncproxy_base_url = http://controller:6080/vnc_auto.html
+
 
 [glance]
 host = controller
