--- a/devstack/local.conf
+++ b/devstack/local.conf
@@ -1,5 +1,5 @@
 [[local|localrc]]
-ADMIN_PASSWORD=
+ADMIN_PASSWORD=thpw
 DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
@@ -16,21 +16,20 @@ FIXED_NETWORK_SIZE=256
 
 LOGDAYS=1
 
-IMAGE_URLS+=",https://download.fedoraproject.org/pub/fedora/linux/releases/23/Cloud/x86_64/Images/Fedora-Cloud-Base-23-20151030.x86_64.qcow2"
-IMAGE_URLS+=",https://cloud-images.ubuntu.com/wily/current/wily-server-cloudimg-amd64-uefi1.img"
+#IMAGE_URLS+=",https://download.fedoraproject.org/pub/fedora/linux/releases/23/Cloud/x86_64/Images/Fedora-Cloud-Base-23-20151030.x86_64.qcow2"
 
 enable_plugin barbican git://git.openstack.org/openstack/barbican
 enable_plugin ceilometer git://git.openstack.org/openstack/ceilometer
 enable_plugin congress git://git.openstack.org/openstack/congress
-enable_plugin ec2-api git://git.openstack.org/openstack/ec2-api
-enable_plugin evoque git://git.openstack.org/openstack/evoque
-enable_plugin magnum git://git.openstack.org/openstack/magnum
+#enable_plugin ec2-api git://git.openstack.org/openstack/ec2-api
+#enable_plugin evoque git://git.openstack.org/openstack/evoque
+#enable_plugin magnum git://git.openstack.org/openstack/magnum
 enable_plugin mistral git://git.openstack.org/openstack/mistral
 enable_plugin murano git://git.openstack.org/openstack/murano
 enable_plugin rally git://git.openstack.org/openstack/rally
 enable_plugin senlin git://git.openstack.org/openstack/senlin
-enable_plugin trove git://git.openstack.org/openstack/trove
-enable_plugin zaqar git://git.openstack.org/openstack/zaqar
+#enable_plugin trove git://git.openstack.org/openstack/trove
+#enable_plugin zaqar git://git.openstack.org/openstack/zaqar
 
 
 
