--- a/devstack/local.conf
+++ b/devstack/local.conf
@@ -1,5 +1,5 @@
 [[local|localrc]]
-ADMIN_PASSWORD=thpw
+ADMIN_PASSWORD=rzkt
 DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
@@ -17,6 +17,8 @@ FIXED_NETWORK_SIZE=256
 LOGDAYS=1
 
 #IMAGE_URLS+=",https://download.fedoraproject.org/pub/fedora/linux/releases/23/Cloud/x86_64/Images/Fedora-Cloud-Base-23-20151030.x86_64.qcow2"
+
+SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5c2000f5
 
 enable_plugin barbican git://git.openstack.org/openstack/barbican
 enable_plugin ceilometer git://git.openstack.org/openstack/ceilometer
