--- a/devstack/local.conf
+++ b/devstack/local.conf
@@ -33,6 +33,16 @@ enable_plugin senlin git://git.openstack.org/openstack/senlin
 #enable_plugin trove git://git.openstack.org/openstack/trove
 #enable_plugin zaqar git://git.openstack.org/openstack/zaqar
 
+CEILOMETER_BRANCH=stable/liberty
+CINDER_BRANCH=stable/liberty
+GLANCE_BRANCH=stable/liberty
+HEAT_BRANCH=stable/liberty
+HORIZON_BRANCH=stable/liberty
+KEYSTONE_BRANCH=stable/liberty
+NEUTRON_BRANCH=stable/liberty
+NOVA_BRANCH=stable/liberty
+SWIFT_BRANCH=stable/liberty
+ZAQAR_BRANCH=stable/liberty
 
 
 [[post-config|$NOVA_CONF]]
