Remove stable branches

--- a/devstack/local.conf
+++ b/devstack/local.conf
@@ -1,5 +1,5 @@
 [[local|localrc]]
-ADMIN_PASSWORD=rzkt
+ADMIN_PASSWORD=dcnz
 DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
@@ -23,7 +23,7 @@ SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5c2000f5
 enable_plugin barbican git://git.openstack.org/openstack/barbican
 enable_plugin ceilometer git://git.openstack.org/openstack/ceilometer
 enable_plugin congress git://git.openstack.org/openstack/congress
-#enable_plugin ec2-api git://git.openstack.org/openstack/ec2-api
+enable_plugin ec2-api git://git.openstack.org/openstack/ec2-api
 #enable_plugin evoque git://git.openstack.org/openstack/evoque
 #enable_plugin magnum git://git.openstack.org/openstack/magnum
 enable_plugin mistral git://git.openstack.org/openstack/mistral
@@ -32,17 +32,6 @@ enable_plugin rally git://git.openstack.org/openstack/rally
 enable_plugin senlin git://git.openstack.org/openstack/senlin
 #enable_plugin trove git://git.openstack.org/openstack/trove
 #enable_plugin zaqar git://git.openstack.org/openstack/zaqar
-
-CEILOMETER_BRANCH=stable/liberty
-CINDER_BRANCH=stable/liberty
-GLANCE_BRANCH=stable/liberty
-HEAT_BRANCH=stable/liberty
-HORIZON_BRANCH=stable/liberty
-KEYSTONE_BRANCH=stable/liberty
-NEUTRON_BRANCH=stable/liberty
-NOVA_BRANCH=stable/liberty
-SWIFT_BRANCH=stable/liberty
-ZAQAR_BRANCH=stable/liberty
 
 
 [[post-config|$NOVA_CONF]]
