--- a/devstack/local.conf
+++ b/devstack/local.conf
@@ -15,8 +15,7 @@ FIXED_RANGE=10.1.0.0/24
 FIXED_NETWORK_SIZE=256
 
 LOGDAYS=1
-
-#IMAGE_URLS+=",https://download.fedoraproject.org/pub/fedora/linux/releases/23/Cloud/x86_64/Images/Fedora-Cloud-Base-23-20151030.x86_64.qcow2"
+RECLONE=yes
 
 SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5c2000f5
 
