Move install script into separate file

--- a/stacks/hot/spark.yaml
+++ b/stacks/hot/spark.yaml
@@ -20,6 +20,7 @@ parameters:
     type: string
     description: ID of private network into which servers get deployed
     default: private
+
   private_subnet_id:
     type: string
     description: ID of private sub network into which servers get deployed
@@ -38,21 +39,7 @@ resources:
       image: { get_param: image }
       flavor: { get_param: flavor }
       user_data_format: RAW
-      user_data: |
-        #!/bin/sh
-        apt-key adv --keyserver keyserver.ubuntu.com --recv E56151BF
-        DISTRO=$(lsb_release -is | tr '[:upper:]' '[:lower:]')
-        CODENAME=$(lsb_release -cs)
-        echo "deb http://repos.mesosphere.com/${DISTRO} ${CODENAME} main" > /etc/apt/sources.list.d/mesosphere.list
-        add-apt-repository -y ppa:webupd8team/java
-        su -c 'echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections'
-        apt-get --yes update
-        apt-get --yes install oracle-java8-installer
-        apt-get --yes install mesos marathon chronos
-        mkdir -p /var/lib/mesos
-        chown ubuntu:ubuntu /var/lib/mesos
-        MY_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4)
-        screen -d -m /usr/bin/mesos-master --ip=$MY_IP --work_dir=/var/lib/mesos
+      user_data: { get_file: mesos_master_install.sh }
 
   mesos_agent:
     type: OS::Nova::Server
@@ -73,6 +60,10 @@ resources:
             apt-get --yes update
             apt-get --yes install mesos
             echo "$param_mesos_master_ip  mesosmaster" >> /etc/hosts
+            mkdir -p /var/lib/mesos
+            chown ubuntu:ubuntu /var/lib/mesos
+            MY_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4)
+            screen -d -m /usr/bin/mesos-slave --ip=$MY_IP --master=mesosmaster:5050 --work_dir=/var/lib/mesos
           params:
             $param_mesos_master_ip: { get_attr: [mesos_master, networks, private, 1] }
 
