--- a/devstack/local.conf
+++ b/devstack/local.conf
@@ -1,13 +1,13 @@
 [[local|localrc]]
-ADMIN_PASSWORD=dcnz
+ADMIN_PASSWORD=bndk
 DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
 SERVICE_TOKEN=a682f596-76f3-11e3-b3b2-e716f9080d50
 
-enable_service s-proxy s-object s-container s-account
-enable_service heat h-api h-api-cfn h-api-cw h-eng
-enable_service quantum,q-svc,q-agt,q-dhcp,q-l3,q-meta
+#enable_service s-proxy s-object s-container s-account
+#enable_service heat h-api h-api-cfn h-api-cw h-eng
+#enable_service quantum,q-svc,q-agt,q-dhcp,q-l3,q-meta
 
 SERVICE_HOST=127.0.0.1
 NETWORK_GATEWAY=10.1.0.1
@@ -19,16 +19,18 @@ RECLONE=yes
 
 SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5c2000f5
 
-enable_plugin barbican git://git.openstack.org/openstack/barbican
-enable_plugin ceilometer git://git.openstack.org/openstack/ceilometer
-enable_plugin congress git://git.openstack.org/openstack/congress
-enable_plugin ec2-api git://git.openstack.org/openstack/ec2-api
+#enable_plugin barbican git://git.openstack.org/openstack/barbican
+#enable_plugin ceilometer git://git.openstack.org/openstack/ceilometer
+#enable_plugin congress git://git.openstack.org/openstack/congress
+#enable_plugin ec2-api git://git.openstack.org/openstack/ec2-api
 #enable_plugin evoque git://git.openstack.org/openstack/evoque
 #enable_plugin magnum git://git.openstack.org/openstack/magnum
-enable_plugin mistral git://git.openstack.org/openstack/mistral
-enable_plugin murano git://git.openstack.org/openstack/murano
-enable_plugin rally git://git.openstack.org/openstack/rally
+#enable_plugin mistral git://git.openstack.org/openstack/mistral
+#enable_plugin murano git://git.openstack.org/openstack/murano
+#enable_plugin rally git://git.openstack.org/openstack/rally
 enable_plugin senlin git://git.openstack.org/openstack/senlin
+#enable_plugin neutron git://git.openstack.org/openstack/neutron
+enable_plugin heat git://git.openstack.org/openstack/heat
 #enable_plugin trove git://git.openstack.org/openstack/trove
 #enable_plugin zaqar git://git.openstack.org/openstack/zaqar
 
