--- a/stacks/hot/spark.yaml
+++ b/stacks/hot/spark.yaml
@@ -67,6 +67,10 @@ resources:
           port_range_min: 5050
           port_range_max: 5050
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 8080
+          port_range_max: 8080
+        - remote_ip_prefix: 0.0.0.0/0
           protocol: icmp
 
   floating_ip:
