--- a/devstack/local.conf
+++ b/devstack/local.conf
@@ -1,5 +1,5 @@
 [[local|localrc]]
-ADMIN_PASSWORD=ftxw
+ADMIN_PASSWORD=chga
 DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
@@ -32,7 +32,7 @@ enable_plugin cloudkitty git://git.openstack.org/openstack/cloudkitty
 #enable_plugin mistral git://git.openstack.org/openstack/mistral
 #enable_plugin murano git://git.openstack.org/openstack/murano
 #enable_plugin rally git://git.openstack.org/openstack/rally
-enable_plugin senlin git://git.openstack.org/openstack/senlin
+#enable_plugin senlin git://git.openstack.org/openstack/senlin
 #enable_plugin neutron git://git.openstack.org/openstack/neutron
 #enable_plugin heat git://git.openstack.org/openstack/heat
 #enable_plugin trove git://git.openstack.org/openstack/trove
